--- a/Convulsion.html
+++ b/Convulsion.html
@@ -8,7 +8,7 @@
 <img src="Banner.png" alt="Banner" style="width: 100%">
 <nav>
     <ul>
-        <li><a href="Home Page.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="LaVein.html">LaVein</a></li>
         <li><a href="Convulsion.html"class="active">Convulsion</a></li>
         <li><a href="Garsenda.html">Garsenda</a></li>
