--- a/LaVein.html
+++ b/LaVein.html
@@ -9,7 +9,7 @@
 <img src="Banner.png" alt="Banner" style="width: 100%">
 <nav>
     <ul>
-        <li><a href="Home Page.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="LaVein.html"class="active">LaVein</a></li>
         <li><a href="Convulsion.html">Convulsion</a></li>
         <li><a href="Garsenda.html">Garsenda</a></li>
