--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img src="Banner.png" alt="Banner" style="width: 100%">
 <nav>
     <ul>
-        <li><a href="Home Page.html"class="active">Home</a></li>
+        <li><a href="index.html"class="active">Home</a></li>
         <li><a href="LaVein.html">LaVein</a></li>
         <li><a href="Convulsion.html">Convulsion</a></li>
         <li><a href="Garsenda.html">Garsenda</a></li>
