--- a/Convulsion.html
+++ b/Convulsion.html
@@ -17,7 +17,7 @@
 <h1>Convulsion</h1>
 
 <div class="columntext"> 
-  <p>SEHC Represent. Based out of Maidstone, Kent, England. Convulsion cross elements of Hardcore and Grindcore to create an onslaught of noise blended in with breakdowns to create a truly
+  <p>Based out of Maidstone, Kent, England. Convulsion cross elements of Hardcore and Grindcore to create an onslaught of noise blended in with breakdowns to create a truly
     ferocious sound. Formed from 4 school friends, Jamie alongside Patrick Ransom, Euan Wood and Jack Packard, the band has gone onto release 2 EPs. "Everything Will Be Okay" was released in 2022 with
     the follow up EP "You Falter. You Fail. You Fall." being release late 2023. The band has represented South East Hardcore (SEHC) across the UK in the past 2 years, playing with heavyweights such
     as The Chisel, SeeYouSpaceCowboy... and Bandit. Whilst I am no longer in the band as a full time member due to the amount of travel between Ireland and Dublin, I still contribute to writing and have 
