--- a/LaVein.html
+++ b/LaVein.html
@@ -18,7 +18,7 @@
 <h1>LaVein</h1>
 
 <div class="columntext"> 
-  <p>LaVein are a Metallic Hardcore band from Dublin Ireland. Born in January 2023, LaVein was formed after 3 members of Garsenda (Jamie, Conor and Lachlan) had a desire to create
+  <p>LaVein are a Metallic Hardcore band based in Dublin Ireland. Born in January 2023, LaVein was formed after 3 members of Garsenda (Jamie, Conor and Lachlan) had a desire to create
     a project with more aggression and heavier than what they were previously working on. The band quickly recruited Peter Cooney and Rossa Molloy and started work on their debut EP "Fine Failure". Within months
   of forming, the band would go on to win Metal 2 the Masses Ireland, and be given a chance to play one of the largest metal festivals in the UK Bloodstock, alongside the likes of Megadeth, Killswitch
   Engage and Mesuggah. Since then, the band has released their Debut EP "Fine Failure", released a music video, toured Ireland and the UK alongside bands such as Chelsea Grin, Kublai Khan
