--- a/LaVein.html
+++ b/LaVein.html
@@ -75,7 +75,7 @@
 </div>
 
 <div class="columnimage"> 
-  <img src="LaVein bloodstock.png" alt="LaVein live at Bloodstock 2023" style="width: 100%" >
+  <img src="LaVein.png" alt="LaVein live at Bloodstock 2023" style="width: 100%" >
 </div>
 
 
