--- a/Garsenda.html
+++ b/Garsenda.html
@@ -19,8 +19,8 @@
 
 <div class="columntext"> 
   <p>Garsenda formed when Jamie and Liz Nolan met at auditions for another band. The Post-Hardcore band drew influences from the likes of Bring Me The Horizon, Don Broco, The Plot In You Andrew Andrew and Poppy.
-    The songs were written mostly during lockdown, with Jamie and Liz meeting weekly over zoom to co-write music, and ultimately shape the project that would be Garsenda. After lockdown, Liz and Jamie#
-    recruited Lachlan Hill and Conor Molloy on drums and bass to fill out the line up and prepare for live shows. Whilst the band never ended up performing live, the did record 3 singles with JSR Audio in Belfast.
+    The songs were written mostly during lockdown, with Jamie and Liz meeting weekly over zoom to co-write music, and ultimately shape the project that would be Garsenda. After lockdown, Liz and Jamie
+    recruited Lachlan Hill and Conor Molloy on drums and bass to fill out the line up and prepare for live shows. Whilst the band never ended up performing live, they did record 3 singles with JSR Audio in Belfast.
     These 3 singles were all released in 2022 as standalone songs. Together they form a triology, and the 3 songs Cosmos, Jaded and Desaturated can be found on all major streaming platforms.</p>
 </div>
 
